--- a/src/app/lunch-pad/lunch-pad.component.html
+++ b/src/app/lunch-pad/lunch-pad.component.html
@@ -3,7 +3,7 @@
   <div class="top" >
 <mat-grid-list cols="3" rowHeight="60px">
     <mat-grid-tile>  <button mat-fab>
-        <mat-icon class="mat-24" (click)="openDialog()" aria-label="Settings">Setting</mat-icon>
+        <mat-icon class="mat-24" (click)="openDialog()" aria-label="Settings2">Setting</mat-icon>
       </button> </mat-grid-tile>
     <mat-grid-tile> <mat-slide-toggle [(ngModel)]="speakWords"
       class="example-margin"
