Sorta can install it now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <div class="main hbox space-between"> -->
     <jaspero-alerts [defaultSettings]="options"></jaspero-alerts>
+
     <app-lunch-pad class="box"></app-lunch-pad>
+
+    <!-- <button *ngIf="Pwa.promptEvent" (click)="installPwa()">
+      Install
+    </button> -->
 
 
 <!-- </div> -->
